force-app/main/default/objects/Search_Log__c/Search_Log__c.object-meta.xml
<CustomObject>
    <description>The log of the search history.</description>
    <label>Search Log</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Search Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Search Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>