force-app/main/default/objects/Search_Log__c/fields/Current_Page_Index__c.field-meta.xml
<CustomField>
    <fullName>Current_Page_Index__c</fullName>
    <description>The index of the current result page.</description>
    <label>Current Page Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>