force-app/main/default/objects/Search_Log__c/fields/Dictionary__c.field-meta.xml
<CustomField>
    <fullName>Dictionary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The direct link to the context dictionary entity.</description>
    <label>Dictionary</label>
    <referenceTo>Collins_Dictionary__c</referenceTo>
    <relationshipLabel>Search Log</relationshipLabel>
    <relationshipName>Search_Log</relationshipName>
    <type>Lookup</type>
</CustomField>