force-app/main/default/objects/Search_Log__c/fields/Dictionary_Code__c.field-meta.xml
<CustomField>
    <fullName>Dictionary_Code__c</fullName>
    <description>The code of the dictionary - search context.</description>
    <label>Dictionary Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>