force-app/main/default/objects/Search_Log__c/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName>
    <description>The index of the last result page.</description>
    <label>Page Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>