force-app/main/default/objects/Search_Log__c/fields/Result_Number__c.field-meta.xml
<CustomField>
    <fullName>Result_Number__c</fullName>
    <description>The total number of results.</description>
    <label>Result Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>