force-app/main/default/objects/Search_Log__c/fields/Result_String__c.field-meta.xml
<CustomField>
    <fullName>Result_String__c</fullName>
    <description>An array of entries sorted the same way as in the main dictionary (empty if no results
are found).</description>
    <label>Result String</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>