force-app/main/default/objects/Search_Log__c/fields/Telegram_User__c.field-meta.xml
<CustomField>
    <fullName>Telegram_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user who made a search.</description>
    <label>Telegram User</label>
    <referenceTo>Telegram_User__c</referenceTo>
    <relationshipLabel>Search Log</relationshipLabel>
    <relationshipName>Search_Log</relationshipName>
    <type>Lookup</type>
</CustomField>